# stream-recorder-rs

./: AGENTS.md  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: bench.yaml  ci.yaml  lint.yaml
benches/: local_hot_paths.rs  main.rs
benches/local_hot_paths/: mod.rs
dev/bench/: data.js
src/: config.rs  consts.rs  lib.rs  main.rs  monitoring.rs  platform.rs  template.rs  thumb.rs  utils.rs
src/cli/: config.rs  mod.rs  platform.rs  thumbnail.rs  token.rs  upload.rs  version.rs
src/config/: mod.rs  validators.rs
src/config/types/: duration.rs  file_size.rs  list.rs  mod.rs  number.rs  text.rs
src/discord/: mod.rs  threads.rs  webhook.rs
src/print/: mod.rs  section.rs  table.rs
src/stream/: api.rs  encoding.rs  messages.rs  mod.rs  monitor.rs  postprocess.rs  recording.rs  types.rs
src/stream/postprocess/: ffmpeg.rs  mod.rs  storage.rs  thumb.rs
src/types/: duration.rs  file_size.rs  mod.rs
src/uploaders/: bunkr.rs  error.rs  fileditch.rs  filester.rs  gofile.rs  http.rs  jpg6.rs  mod.rs
templates/: example.hbr
