[package]
name = "stream-recorder"
version = "0.1.1"
edition = "2024"
description = "A tool for recording live streams and mirroring them to various platforms."
license = "MIT"
repository = "https://github.com/sn0w12/stream-recorder-rs"
homepage = "https://github.com/sn0w12/stream-recorder-rs"
keywords = ["streaming", "recording", "live", "video"]
categories = ["command-line-utilities"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["multipart", "stream", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "process", "signal", "fs"] }
keyring = { version = "3.6", features = ["windows-native", "linux-native"] }
toml = "0.9"
dirs = "6.0"
anyhow = "1.0"
iso8601-timestamp = "0.1"
clap = { version = "4.5", features = ["derive"] }
bunkr-client = { version = "0.1.4", default-features = false }
chrono = "0.4"
tokio-util = { version = "0.7", features = ["io"] }
tempfile = "3.0"
scopeguard = "1.2"
regex = "1.10"
uuid = { version = "1.0", features = ["v4"] }
cookie = "0.18"
fs2 = "0.4"
walkdir = "2.5"
async-trait = "0.1"
paste = "1.0"
semver = "1.0"
colored = "3"
handlebars = "6.4.0"

[profile.release]
opt-level = 3
lto = true
panic = "abort"
strip = true
