[package]
name = "stream-recorder"
version = "0.2.1"
edition = "2024"
description = "A tool for recording live streams and mirroring them to various platforms."
license = "MIT"
repository = "https://github.com/sn0w12/stream-recorder-rs"
homepage = "https://github.com/sn0w12/stream-recorder-rs"
keywords = ["streaming", "recording", "live", "video"]
categories = ["command-line-utilities"]

[features]
default = ["linux-dbus-keyring"]
linux-dbus-keyring = ["dbus-secret-service-keyring-store"]

[dependencies]
clap = { version = "4.6", features = ["derive"] }
reqwest = { version = "0.13", default-features = false, features = ["multipart", "stream", "json", "rustls", "query"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.51", features = ["macros", "rt-multi-thread", "process", "signal", "fs"] }
tokio-util = { version = "0.7", features = ["io"] }
anyhow = "1.0"
toml = "1.1"
dirs = "6.0"
chrono = "0.4"
tempfile = "3.27"
scopeguard = "1.2"
regex = "1.10"
fs2 = "0.4"
walkdir = "2.5"
async-trait = "0.1"
paste = "1.0"
semver = "1.0"
handlebars = "6.4.0"
bunkr-client = { version = "0.2", default-features = false }
tiny-table = { version = "0.2.2" }
keyring-core = "1.0"

[dev-dependencies]
criterion = "0.8.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store = "1.0"

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { version = "1.0", features = ["keychain"] }

[target.'cfg(target_os = "linux")'.dependencies]
dbus-secret-service-keyring-store = { version = "1.0", features = ["crypto-openssl"], optional = true }

[profile.release]
opt-level = 3
lto = true
panic = "abort"
strip = true

[lib]
bench = false

[[bench]]
name = "main"
harness = false
